chore: fix wrapping buttons in settings

--- a/meteor/client/styles/settings.scss
+++ b/meteor/client/styles/settings.scss
@@ -32,6 +32,7 @@
 		
 		.table-item-actions {
 			text-align: right;
+			min-width: 4em;
 
 			.action-btn {
 				vertical-align: top;
